# stare

./: .clang-format  CMakeLists.txt  default.nix  derivation.nix  overlay.nix  release.nix
include/stare/: base.hpp  concepts.hpp  config.hpp  enum.hpp  field.hpp  macros.hpp  nameof.hpp  reflect.hpp  reflection.hpp  template_arg.hpp
tests/: CMakeLists.txt  basic_reflect.cpp  define_struct.cpp  enumeration.cpp  template_args.cpp
